# scope-audio-transcription

./: .gitignore  LICENSE  README.md  example.py  plugin.json  pyproject.toml  requirements.txt  setup.py
scope_audio_transcription/: __init__.py  plugin.py
scope_audio_transcription/pipelines/: __init__.py  pipeline.py  schema.py
tools/: scope-prompt-monitor.pyw
