[project]
name = "scope-audio-transcription"
version = "0.3.0"
description = "Voice-controlled AI video generation plugin for Daydream Scope — speak and watch imagery transform in real time"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Krista Faist", email = "kristabluedoor@gmail.com"},
]
urls = {Homepage = "https://github.com/kfaist/scope-audio-transcription"}

dependencies = [
    "faster-whisper",
    "spacy",
    "sounddevice",
    "numpy",
]

[project.entry-points."scope"]
scope_audio_transcription = "scope_audio_transcription.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
